--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -34,6 +34,11 @@
                             @* TODO: Link *@
                             <a class="nav-link" asp-area="">Catalogus</a>
                         </li>
+
+                        <li class="nav-item">
+                            @* TODO: Link *@
+                            <a class="nav-link" asp-area="" asp-page="/Movies/Create">Voeg film toe</a>
+                        </li>
                         <li class="nav-item d-sm-none">
                             @* TODO: Link *@
                             <a class="nav-link" asp-area="">Login</a>
