--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -75,7 +75,8 @@
             </div>
         </div>
         <div class="ml-auto px-4 text-right mt-2">
-            <a href="" class="btn btn-link">Zie alle films</a>
+            <a asp-page="movies/Index" class="btn btn-link">Zie alle films</a>
         </div>
     </div>
 </div>
+
