--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                         </li>
                         <li class="nav-item">
                             @* TODO: Link *@
-                            <a class="nav-link" asp-area="">Catalogus</a>
+                            <a class="nav-link" asp-page="/Movies/Index" asp-area="">Catalogus</a>
                         </li>
 
                         <li class="nav-item">
@@ -77,7 +77,7 @@
 
     <footer class="border-top footer text-light text-muted bg-dark">
         <div class="container">
-            &copy; 2021 - movie_reservation
+            &copy; 2021 - movie reservation
         </div>
     </footer>
 
