--- a/Pages/Movies/Create.cshtml
+++ b/Pages/Movies/Create.cshtml
@@ -1,13 +1,11 @@
 @page
 @model CreateModel
-
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
-
-<h4>Movie</h4>
+<h1>Create movie</h1>
 <hr />
 <div class="row">
     
@@ -32,11 +30,11 @@
                 <span asp-validation-for="Movie.Price" class="text-danger"></span>
             </div>
 
-             @* <div class="form-group">
+             <div class="form-group">
                 <label asp-for="Movie.Description" class="control-label"></label>
-                @Html.TextArea("Description", new { @class = "form-control" })
+                @Html.TextArea("Movie.Description", new { @class = "form-control" })
                 <span asp-validation-for="Movie.Description" class="text-danger"></span>
-            </div> *@
+            </div>
 
             <div class="form-group">
                 <label asp-for="Movie.Image" class="control-label"> </label>
