--- a/Pages/Movies/Create.cshtml
+++ b/Pages/Movies/Create.cshtml
@@ -30,17 +30,31 @@
                 <span asp-validation-for="Movie.Price" class="text-danger"></span>
             </div>
 
+            <div class="form-group">
+                <label asp-for="Movie.Seats" class="control-label"></label>
+                <input asp-for="Movie.Seats" class="form-control"  placeholder="Voer het aantal stoelen in..."/>
+                <span asp-validation-for="Movie.Seats" class="text-danger"></span>
+            </div>
+
+             <div class="form-group">
+                <label asp-for="Movie.Time1" class="control-label"></label>
+                <input asp-for="Movie.Time1" class="form-control"  placeholder="Voer het aantal stoelen in..."/>
+                <span asp-validation-for="Movie.Time1" class="text-danger"></span>
+            </div>
+            
+             <div class="form-group">
+                <label asp-for="Movie.Time2" class="control-label"></label>
+                <input asp-for="Movie.Time2" class="form-control"  placeholder="Voer het aantal stoelen in..."/>
+                <span asp-validation-for="Movie.Time2" class="text-danger"></span>
+            </div>
+
              <div class="form-group">
                 <label asp-for="Movie.Description" class="control-label"></label>
                 @Html.TextArea("Movie.Description", new { @class = "form-control" })
                 <span asp-validation-for="Movie.Description" class="text-danger"></span>
             </div>
 
-            <div class="form-group">
-                <label asp-for="Movie.Image" class="control-label"> </label>
-                <input  asp-for="Movie.Image" type="file" class="form-control-file">
-            </div>
-
+    
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
