--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -8,7 +8,7 @@
 <div class="cover" style="background-image: linear-gradient(to bottom, #343a40, rgba(0,0,0,0), #fff), url('/images/the_martian.jpg');">
     <div class="container pt-4">
         <h2 class="cover__title text-white display-3 font-weight-bold">THE MARTIAN</h1>
-        <a class="btn btn-primary d-inline-flex align-items-center">
+        <a class="btn btn-primary d-inline-flex align-items-center" asp-area="" asp-page="/Movies/Index">
             Reserveer nu
             <span class="material-icons ml-2">label_important</span>
         </a>
