--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -74,3 +74,41 @@ body {
 .cover_cta {
   box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.75);
 }
+
+.venue {
+  display: grid;
+  grid-template-columns: repeat(18, 1fr);
+  grid-template-rows: repeat(19, 1fr);
+  width: calc(18 * 1.5rem);
+  height: calc(19 * 1.5rem);
+  border: 1px solid black;
+  margin: 1rem 0;
+}
+
+.venue--large {
+  grid-template-columns: repeat(30, 1fr);
+  grid-template-rows: repeat(20, 1fr);
+  width: calc(30 * 1.5rem);
+  height: calc(20 * 1.5rem);
+}
+
+.venue-seat {
+  background-color: orange;
+  border: 1px solid black;
+  margin: 0;
+  cursor: pointer;
+}
+
+.venue-seat--taken {
+  background-color: red;
+  cursor: not-allowed;
+}
+
+.venue-seat--disabled {
+  background-color: grey;
+  cursor: not-allowed;
+}
+
+.venue input[type="checkbox"]:checked + label {
+  background-color: green;
+}
