--- a/Components/Venue.razor
+++ b/Components/Venue.razor
@@ -1,4 +1,5 @@
 <p class="control-label">Choose Seats for @Type venue</p>
+<div class="grey-bar text-center" style="background-color:grey; width:39%; height:20px;">screen</div>
 @if (Type == "Small") {
     <div class="venue">
         @for(var i = 1; i <= 19; i++) {
