--- a/Pages/Reservations/Index.cshtml
+++ b/Pages/Reservations/Index.cshtml
@@ -4,7 +4,22 @@
 
 
 <div class="container-fluid">
-<h1 class="text-center">Reservaties</h1>
+<h1 class="text-center">Reservering</h1>
+@{
+    var price = 0.0m;
+    // turn price into a decimal
+    var day = DateTime.Now.Date;
+    @foreach(var viewing in Model.Reservation) {
+        // check if it is the current day
+        if(viewing.ReservationTime == day){
+            // make calculations to get the correct price 
+            price += viewing.Price;
+            price = price * (decimal)viewing.Seats.Count();
+        }
+   }  
+}
+
+<h3 class="text-center m-b-30">Inkomsten vandaag:€ @price -, </h3>
     <form method="post">
         <div class="row text-white px-4">
         @foreach(var viewing in Model.Reservation) {
