--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -70,7 +70,7 @@
 
                         @if (auth && (auth.User.Role == Models.UserRole.Clerk || auth.User.Role == Models.UserRole.Owner)) {
                             <li class="nav-item">
-                                <a class="nav-link" href="/Reservations">reservatie's</a>
+                                <a class="nav-link" href="/Reservations">Reserveringen</a>
                             </li>
                         }
                     </ul>
@@ -90,7 +90,7 @@
                                 @if (auth) {
                                     <a class="dropdown-item" href="/users/edit?id=@auth.User.Id">Profiel</a>
                                     <a class="dropdown-item" href="/logout">Log uit</a>
-                                    <a class="dropdown-item" href="/MyReservation??id=@auth.User.Id">Mijn Reservatie</a>
+                                    <a class="dropdown-item" href="/MyReservation??id=@auth.User.Id">Mijn Reserveringen</a>
                                 }
                                 @if (!auth) {
                                     <a class="dropdown-item" href="/login">Login</a>
